ingress-controller.yml
################################################
# Name: Oluwatosin Ogunfile
#
# Date: 02/07/2024
#
# Title: Deployment of an Ingress Controller, two services, and two deployments
#
################################################

# Ingress Controller Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
