private-site-development.yml
################################################
# Name: Oluwatosin Ogunfile
#
# Date: 02/07/2024
#
# Title: Deployment of an Ingress Controller, two services, and two deployments
#
################################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tectronix-2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tectronix-2
      path: about-us
  template:
    metadata:
      labels:
        app: tectronix-2
        path: about-us
    spec:
      containers:
      - name: apache2
        image: ubuntu/apache2:latest
        volumeMounts:
        - name: apache2-config-volume
          mountPath: /etc/apache2/apache2.conf
          subPath: apache2.conf
        - name: apache2-config-volume
          mountPath: /srv/www/index.html
          subPath: index.html
        ports:
        - containerPort: 80
          name: apache2
          protocol: TCP
      volumes:
      - name: apache2-config-volume
        configMap:
          name: apache2-config-svr2
          items:
          - key: apache2
            path: apache2.conf
          - key: apache2-site
            path: index.html
